# ghcli-tui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  instance.rs  main.rs
