[package]
name = "ghcli-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal user interface for the GitHub CLI"
keywords = ["github", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["akabinds <bindsdev@gmail.com>"]
license = "MIT"

[[bin]]
name = "gct"
path = "src/main.rs"
bench = false

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
crossterm = "0.26.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tui = "0.19.0"
